--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   border-radius: var(--radius-lg);
   position: sticky;
   top: 2%;
+  z-index: 10;
 }
 
 nav {
@@ -317,7 +318,6 @@ nav h1 {
   align-items: center;
   justify-self: center;
   justify-content: center;
-
   margin: 20px 0px;
 }
 
@@ -376,56 +376,97 @@ nav h1 {
 
 
 /* Project Page Styles */
-.projects-section {
-  width: 95%;
-  height: 100vh;
-  justify-self: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: white;
-  border-radius: var(--radius-lg);
-  color: #023047;
-  margin: 150px 0px;
-}
-
-.slider-container {
+.main-project {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.slider-container img {
-  height: 450px;
-  margin: 0px 40px;
+.project {
+  width: 70%;
+  height: 70%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 100px;
+
 }
 
-.projects-section h2 {
-  font-size: 40px;
+.project-contain {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  font-size: 50px;
+  margin-bottom: 50px;
+  border-bottom: 2px solid white;
 }
 
-.projects-section button {
-  font-size: 30px;
-  cursor: pointer;
-}
 
-.slide {
+.project-sec {
+  width: 100%;
+  height: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 40px 0px;
 }
 
-.slide h3 {
-  font-size: 30px;
-  margin: 5px 0px;
+.project-sec-1 {
+  position: relative;
+  border: 2px solid white;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.slide a:hover {
-  text-decoration: underline;
+
+.project-sec-1 img {
+  width: 100%;
+  height: auto;
+  transition: opacity 0.4s ease, transform 0.4s ease;
 }
+
+
+.project-sec-1 h1,
+.project-sec-1 h2 {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  z-index: 2;
+}
+
+
+.project-sec-1 h1 {
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.project-sec-1 h2 {
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+  border: 2px solid white;
+}
+
+.project-sec-1:hover img {
+  opacity: 0;
+  transform: scale(0.9);
+}
+
+.project-sec-1:hover h1,
+.project-sec-1:hover h2 {
+  opacity: 1;
+}
+
+.project-sec-1 h2 a {
+  color: white;
+  text-decoration: none;
+}
+
 
 
 @media screen and (max-width: 1000px) {
@@ -467,14 +508,7 @@ nav h1 {
 
   }
 
-  .projects-section {
-    height: 100vh;
-    margin: 40px 0px;
-  }
 
-  .projects-section img {
-    height: 350px;
-  }
 
   .slide h3 {
     margin: 10px 0px;
@@ -585,24 +619,19 @@ nav h1 {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  .projects-section {
-    height: 80vh;
+  .project {
     width: 80%;
   }
 
-  .projects-section img {
-    height: 310px;
-    width: 80%;
-
+  .project-sec-1 h1 {
+    width: 100%;
+    text-align: center;
   }
 
-  .projects-section button {
-    margin: 0px 30px;
+  .project-sec-1 h2 {
+    margin-top: 10px;
+    padding: 5px 10px;
   }
-
-
-
-
 
   .contact-1 label svg {
     font-size: 20px;
@@ -618,14 +647,7 @@ nav h1 {
     font-size: 40px;
   }
 
-  .projects-section img {
-    height: auto !important;
-  }
 
-  .projects-section {
-    height: 80vh;
-    margin: 50px 0px;
-  }
 
   .skill-contains {
     width: 175px;
@@ -637,9 +659,12 @@ nav h1 {
     margin: 0px 10px;
   }
 
-
   .skill-container {
     margin-bottom: 20px;
+  }
+
+  .project {
+    grid-template-columns: 1fr;
   }
 
 
@@ -677,21 +702,11 @@ nav h1 {
     margin: 20px 0px;
   }
 
-  .projects-section img {
-    height: auto !important;
-  }
+
 }
 
 @media screen and (max-width: 500px) {
-  .projects-section {
-    height: 60vh;
-  }
 
-  .projects-section img {
-    height: auto !important;
-    width: 200px;
-
-  }
 
   .skill-container {
     width: 85%;
